--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reddit Post</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="post-container"></div>
-    <script src="main.js"></script>
-    
-</body>
+    <script defer src="main.js"></script>
+    <title>Kalender</title>
+    <!DOCTYPE html>
+    <html lang="nl">
+    </head>
+    <body>
+        <div class="calendar">
+            <div class="header">
+                <button onclick="prevMonth()">&#8592;</button>
+                <h2 id="monthYear"></h2>
+                <button onclick="nextMonth()">&#8594;</button>
+            </div>
+            <div class="days" id="days"></div>
+        </div>
+    </body>
 </html>
